--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Coad Portfolio</title>
+		<title>GOOD AGS Tutoring</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 	
 		<!--Contact Button-->
         <script type = "text/javascript" src = "http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -39,8 +38,6 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="Experience.html">CV</a></li>
 						<li><a href="tutor.html">GOODAGS</a></li>
-						<!--<li><a href="Explore.html">Explore</a></li>-->
-						<!--<li><button id=contactbutton""onclick="function() {document.getElementById('contactbutton').innerHTML = 'Fred Flinstone';}" class="button special">Contact</button></li>-->
 					</ul>
 				</nav>
 			</header>
@@ -49,20 +46,18 @@
 			<section id="banner">
 				<div class="inner">
 					<h2>{ Howdy }</h2>
-					<p>Welcome to the Portfolio of Josiah Coad 
-					<br><a href="http://www.tamu.edu/" target="_blank">Texas A&M Computer Engineering Student</a></br>
+					<p>Good Ags Tutoring
+					<br><a href="http://www.tamu.edu/" target="_blank">We're the best in Physics, Math, and Chemistry</a></br>
 					</p>
 					<ul class="actions">
-						<!--<li><a href="#content" class="button big special">Sign Up</a></li>
-						<li><a href="#elements" class="button big alt">Learn More</a></li>-->
 					</ul>
 				</div>
 			</section>
 		<!-- Greeting -->
 			<section id="one" class="wrapper style1">
 				<header class="major">
-					<h2>Nice to Meet You</h2>
-					<p> <a href="#intro" style="text-decoration: none; color: inherit;">here are a few things about me</a></p>
+					<h2>If you're looking for results, you're one choice away.</h2>
+					<p>We claim experience, expertise, and results guaranteed.</p>
 				</header>
 			</section>
 
@@ -72,32 +67,36 @@
 					<div class="row">
 						<div class="8u">
 							<section>
-								<h2>My Mission</h2>
-								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-								<p>   To do my part, there are many things I have in mind to accomplish over my next three years at A&M. Some of these aspirations include being a leader in IEEE, Maroon Coats, and a software lead on the 120-member AUV team. I would also like to give back to my community by putting on hackathons for the local high schools and cultivate in them a passion for engineering (and of course Aggieland!). After graduating from A&M and shedding some tears, I plan to go on to grad school to study artificial intelligence and machine learning. Then, I want to travel the world doing something that makes a difference (founder of Tesla: Elon Musk, #Goals), improve my skills while in the industry and then, later in life, fulfill a calling of mine to be a professor!</p>
+								<h2>About GOOD AGs Tutoring</h2>
+								<a href="#" class="image fit"><img src="images/KyleField.jpg" alt="" /></a>
+								<p>   Josiah Coad (physics), Jack Landingham (chemistry), and Johnathan McGuire (math). We're all engineers who found our passion in these respective subjects. Call us nerds but it is who we are and we love it and love teaching it. We've all gotten A's in our respective subject, and between the three of us, have tutored over a hundred sessions for A&M and privately.</p>
 							</section>
 						</div>
 						<div class="4u">
 							<section>
-								<h3>My Faith</h3>
-								<p>Being part of something greater than me, my Christian family around the world, is the most important things to me.</p>
+								<h3>What Our Partners in Crime (students) Say:</h3>
+								<p>
+									<li>"They are really cool" -Private Tutoree in Algebra</li>
+									<li>"Nah. I mean they're 'ight." -Private Tutoree in Physics</li>
+								</p>
 								<ul class="actions">
-									<li><a href="https://www.youtube.com/watch?v=jyYFxp7apl4" target="_blank" class="button alt">Find Out Why</a></li>
+									<li><a href="mailto:josiah@coad.net" class="button alt">Standard Rate $40/hr<br>Contact for Group Prices</a></li>
 								</ul>
 							</section>
 							<hr />
 							<section>
-								<h3>My Quick Links</h3>
+								<h3>Contact Us</h3>
 								<ul class="alt">
-									<li><a target="_blank" href="https://www.linkedin.com/in/josiahcoad">linkedin</a></li>
-									<li><a target="_blank" href="https://www.github.com/josiahcoad">github</a></li>
-									<li><a target="_blank" href="https://www.codecademy.com/">codecademy</a></li>
-									<li><a target="_blank" href="https://www.ted.com/profiles/5095404">tedTalks</a></a></li>
+									<li><p>Josiah Coad | 208-819-2625 | josiah@coad.net</p></li>
+									<li><p>Jack Landingham | 321-615-1266 | jacklandingham96@gmail.com</p></li>
+									<li><p>Jonathan McGuire | 512-663-2730 | jonathanmcguire1@tamu.edu</p></li>
 								</ul>
 							</section>
 						</div>
 					</div>
 				</div>
-			</section>			
+			</section>
 	</body>
 </html>
+
+
