--- a/index.html
+++ b/index.html
@@ -5,17 +5,6 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-	
-		<!--Contact Button-->
-        <script type = "text/javascript" src = "http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script type = "text/javascript" language = "javascript">
-         $(document).ready(function() {
-            $("#hoverbutton").click(function () {
-               $(this).replaceWith("josiah@coad.net");
-            });
-         });
-        </script>
-        
         <script src="js/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
@@ -25,7 +14,7 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
-		<link rel="icon" type="image/png" href="images/tag.png">
+		<link rel="icon" type="image/png" href="images/thumbs.png">
 	</head>
 
 	<body id="top">
