--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 				<h1><a href="#"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="Experience.html">CV</a></li>
-						<li><a href="tutor.html">GOODAGS</a></li>
+						<li><a href="www.josiahcoad.com">Special Deal!</a></li>
 					</ul>
 				</nav>
 			</header>
