--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 	<body id="top">
 
 		<!-- Header -->
-			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#"></a></h1>
-				<nav id="nav">
-					<ul>
-						<li><a href="www.josiahcoad.com">Special Deal!</a></li>
-					</ul>
-				</nav>
-			</header>
+		<!--	<header id="header" class="skel-layers-fixed">-->
+		<!--		<h1><a href="#"></a></h1>-->
+		<!--		<nav id="nav">-->
+		<!--			<ul>-->
+		<!--				<li><a href="www.josiahcoad.com">Special Deal!</a></li>-->
+		<!--			</ul>-->
+		<!--		</nav>-->
+		<!--	</header>-->
 
 		<!-- Banner -->
 			<section id="banner">
