--- a/index.html
+++ b/index.html
@@ -15,19 +15,24 @@
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
 		<link rel="icon" type="image/png" href="images/thumbs.png">
+	<script>
+	function myFunction() {
+    	prompt("Enter your email and we'll contact you for a reduced price.");
+	}
+	</script>
 	</head>
 
 	<body id="top">
 
-		<!-- Header -->
-		<!--	<header id="header" class="skel-layers-fixed">-->
-		<!--		<h1><a href="#"></a></h1>-->
-		<!--		<nav id="nav">-->
-		<!--			<ul>-->
-		<!--				<li><a href="www.josiahcoad.com">Special Deal!</a></li>-->
-		<!--			</ul>-->
-		<!--		</nav>-->
-		<!--	</header>-->
+		 Header 
+			<header id="header" class="skel-layers-fixed">
+				<h1><a href="#"></a></h1>
+				<nav id="nav">
+					<ul>
+						<li><button type="button" onclick="myFunction()">Special Deal!</button></li>
+					</ul>
+				</nav>
+			</header>
 
 		<!-- Banner -->
 			<section id="banner">
