--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
 		<link rel="icon" type="image/png" href="images/thumbs.png">
-	<script>
-	function myFunction() {
-    	prompt("Enter your email and we'll contact you for a reduced price.");
-	}
-	</script>
+	<!--<script>-->
+	<!--function myFunction() {-->
+ <!--   	prompt("Enter your email and we'll contact you for a reduced price.");-->
+	<!--}-->
+	<!--</script>-->
 	</head>
 
 	<body id="top">
 
-		 Header 
-			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#"></a></h1>
-				<nav id="nav">
-					<ul>
-						<li><button type="button" onclick="myFunction()">Special Deal!</button></li>
-					</ul>
-				</nav>
-			</header>
+		 <!--Header -->
+			<!--<header id="header" class="skel-layers-fixed">-->
+			<!--	<h1><a href="#"></a></h1>-->
+			<!--	<nav id="nav">-->
+			<!--		<ul>-->
+			<!--			<li><button type="button" onclick="myFunction()">Special Deal!</button></li>-->
+			<!--		</ul>-->
+			<!--	</nav>-->
+			<!--</header>-->
 
 		<!-- Banner -->
 			<section id="banner">
@@ -68,8 +68,8 @@
 							<section>
 								<h3>What Our Partners in Crime (students) Say:</h3>
 								<p>
-									<li>"They are really cool" -Private Tutoree in Algebra</li>
-									<li>"Nah. I mean they're 'ight." -Private Tutoree in Physics</li>
+									<!--<li>"They are really cool" -Private Tutoree in Algebra</li>-->
+									<li>"Josiah was my private tutor for physics last year and without him I don't think I would have passed. He is incredibly patient and really cares about the people he is tutoring." -Private tutoree in college physics</li>
 								</p>
 								<ul class="actions">
 									<li><a href="mailto:josiah@coad.net" class="button alt">Standard Rate $40/hr<br>Contact for Group Prices</a></li>
